Importer und Crawler für SWR und NDR
